<resources>
    <string name="app_name">Lektion_8_Networking_Exercise_StarWars</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="star_wars">Star Wars</string>
    <string name="Home">Home</string>
    <string name="orbital_period">Orbital Period</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="terrain">Terrain</string>
    <string name="diameter">Diameter</string>
    <string name="surface_water">Surface Water</string>
    <string name="population">Population</string>
    <string name="gravity">Gravity</string>
    <string name="climate">Climate</string>
    <string name="name">Name</string>
    <string name="home_planet">Home Planet:</string>
</resources>