<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.starwars.StarWarsFragment">

    <EditText
        android:id="@+id/editText_searchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Insert Random Number"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/button_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Person! -->
    <TextView
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Person:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_searchText" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person" />

    <TextView
        android:id="@+id/textView_hairColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hair Colour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_skinColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skin Colour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_hairColour" />

    <TextView
        android:id="@+id/textView_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_skinColour" />

    <TextView
        android:id="@+id/textView_eyeColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eye Colour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_gender" />

    <TextView
        android:id="@+id/textView_birthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Birth Year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_eyeColour" />


    <TextView
        android:id="@+id/textView_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_birthYear" />

    <TextView
        android:id="@+id/textView_mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_height" />

    <!-- Planet! -->
    <TextView
        android:id="@+id/homePlanet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_planet"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mass" />

    <TextView
        android:id="@+id/textView_planetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homePlanet" />

    <TextView
        android:id="@+id/textView_planetClimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetName" />

    <TextView
        android:id="@+id/textView_planetGravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetClimate" />

    <TextView
        android:id="@+id/textView_planetTerrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetGravity" />

    <TextView
        android:id="@+id/textView_planetRotationPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotation_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetTerrain" />

    <TextView
        android:id="@+id/textView_planetOrbitalPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orbital_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetRotationPeriod" />

    <TextView
        android:id="@+id/textView_planetDiameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diameter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetOrbitalPeriod" />

    <TextView
        android:id="@+id/textView_planetSurface_Water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surface_water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetDiameter" />

    <TextView
        android:id="@+id/textView_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planetSurface_Water" />



</androidx.constraintlayout.widget.ConstraintLayout>